# engram

./: .gitignore  README.md  pyproject.toml
src/engram/: __init__.py  cli.py  setup.py
src/engram/capture/: __init__.py
src/engram/core/: __init__.py  db.py  embedder.py  project.py  vector.py
src/engram/search/: __init__.py  semantic.py
